@@ -1,3 +1,7 @@
+  10 Oct 2018;  <ago@gentoo.org> dappersec-sources-4.9.131.ebuild:
+  sys-kernel/dappersec-sources: fix HOMEPAGE/DESCRIPTION, add the ewarn about
+  the absence of Meltdown and Spectre fixes
+
 *dappersec-sources-4.9.131 (10 Oct 2018)
 
   10 Oct 2018;  <ago@gentoo.org> +dappersec-sources-4.9.131.ebuild,
